[package]
name = "signal-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
crossterm = "0.29.0"
directories = "6.0.0"
flate2 = "1.1.1"
hostname = "0.4.1"
image = "0.25.6"
qrcode = "0.14.1"
ratatui = "0.29.0"
ratatui-image = "5.0.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
